fix wcag issue 5.5.2 focus visibility for request access header items

--- a/gui/admin-gui/src/frontend/scss/midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/midpoint.scss
@@ -2447,3 +2447,7 @@ footer.main-footer a {
   float: left;
   margin-left: 5px;
 }
+
+.bs-stepper-header .step {
+  margin: 5px;
+}
